--- a/readme.org
+++ b/readme.org
@@ -88,7 +88,7 @@ If you want to tweak a search url, you can modify the alist =helm-google-engines
 To do it in elisp use =add-to-list=, for example to modify the searx url:
 
 #+BEGIN_SRC emacs-lisp
-(add-to-list 'helm-google-engines '(searx . "https://searx.info/?engines=google&format=json&q=%s"))
+(add-to-list 'helm-google-engines '(searx . "https://searx.drakonix.net/?engines=google&format=json&q=%s"))
 #+END_SRC
 
 This will /shadow/ the old value which is the correct way to "modify" an alist entry.
